# cpp-starter

./: .cmake-format  .gitignore  CMakeLists.txt  README.md  package-lock  package-lock.cmake
.github/: dependabot.yml
.github/workflows/: build.yaml  build.yml  check.yaml  ci.yaml  test.yaml  test.yml
cmake/: CPM.cmake  CheckCoverage.cmake  FindCatch2.cmake  FindCheckWarning.cmake  FindFixFormat.cmake  FindFormat.cmake  Findargparse.cmake  MyFibonacciConfig.cmake
include/example/: example.hpp
include/my_fibonacci/: sequence.hpp
src/: example.cpp  main.cpp  sequence.cpp
test/: example_test.cpp  sequence_test.cpp
